add flexbox under header with two flex items inside, media query for new flex box not tested

--- a/project1.html
+++ b/project1.html
@@ -16,11 +16,12 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<!-- <link rel="shortcut icon" href="/favicon.ico"> -->
 		<!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
-		<link type="text/css" rel="stylesheet" href="p12.css"> 
+		<link type="text/css" rel="stylesheet" href="project1.css"> 
 	</head>
 
 	<body>
-             <header>header</header>
+             <header > header</header>
+             <div id="header-flex-box"> <div id="one">  </div>  <div id="two">   </div></div>
              <div id='main'>
                <article>article</article>
                <nav>nav</nav>
