--- a/project1.html
+++ b/project1.html
@@ -21,7 +21,7 @@
 
 	<body>
              <header > header</header>
-             <div id="header-flex-box"> <div id="one">  </div>  <div id="two">   </div></div>
+             <div id="header-flex-box"> <div id="one">  </div>  <div id="two"><img class="udacity-logo" src="./images/udacity_logo.svg"/>   </div></div>
              <div id='main'>
                <article>article</article>
                <nav>nav</nav>
