add flex container with three flex items in a row under the header flex container with the Udacity logo

--- a/project1.html
+++ b/project1.html
@@ -22,6 +22,12 @@
 	<body>
              <header > header</header>
              <div id="header-flex-box"> <div id="one">  </div>  <div id="two"><img class="udacity-logo" src="./images/udacity_logo.svg"/>   </div></div>
+               <div id="main-container">
+                  <div id="left"> </div>
+                  <div id="center"> </div>
+                  <div id="right"> </div>
+               </div>
+             <div id="side-nav-container"> <div id="side-nav1">  </div>  <div id="side-nav2">   </div></div>
              <div id='main'>
                <article>article</article>
                <nav>nav</nav>
