--- a/project1.html
+++ b/project1.html
@@ -23,11 +23,18 @@
              <header > header</header>
              <div id="header-flex-box"> <div id="one">  </div>  <div id="two"><img class="udacity-logo" src="./images/udacity_logo.svg"/>   </div></div>
                <div id="main-container">
-                  <div id="left"> </div>
+                    <div id="side-nav-container"> 
+                      <div id="side-nav1"> <img class="side-nav1-img" src="./images/map.jpg"> </div> 
+                      <div id="side-nav2"> <img class="side-nav2-img" src="./images/cat.jpg"> </div> 
+                      <div id="side-nav3"> <img class="side-nav3-img" src="./images/map.jpg"> </div>
+                    </div> 
+                </div> 
+               <!-- <div id="main-container">
+                  <div id="left">
+                  </div>
                   <div id="center"> </div>
                   <div id="right"> </div>
-               </div>
-             <div id="side-nav-container"> <div id="side-nav1">  </div>  <div id="side-nav2">   </div></div>
+               </div> -->
              <div id='main'>
                <article>article</article>
                <nav>nav</nav>
